syntax = "proto3";
package pryzmatics.incentives;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/pryzm-finance/pryzmatics/types/incentives";

message PoolIncentive {
  uint64 id = 1;
  string bond_denom = 2;
  cosmos.base.v1beta1.Coin amount = 3 [
    (gogoproto.nullable) = false
  ];
  string incentives_in_stable_coin_terms = 4 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  int64 block_height = 5;
  google.protobuf.Timestamp block_time = 6 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
}

message PoolTotalIncentives {
  string bond_denom = 1;
  repeated cosmos.base.v1beta1.Coin incentives = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
  string incentives_in_stable_coin_terms = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}
